2007-11-24  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Core/Banshee.Collection/AlbumInfo.cs: Ignore any
	part of the album/artist string that ends in a (.*) 

2007-11-22  Aaron Bockover  <abock@gnome.org>

	* src/Core/Hyena/Hyena.Data/Selection.cs: Updated to use RangeCollection

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView.cs: Updated to reflect
	API change in Selection

2007-11-22  Aaron Bockover  <abock@gnome.org>

	* Core/Hyena/Hyena.Collections/RangeCollection.cs: New collection for
	storing ordered ranges that supports efficient add/remove of indexes

	* Core/Hyena/Hyena.Collections/IStackProvider.cs: Moved to new 
	Hyena.Collections namespace

	* Core/Banshee.Core/Banshee.Kernel/IntervalHeap.cs: Reset count

	* tests/Hyena/RangeCollectionTests.cs: Added unit tests for RangeCollection

2007-11-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Makefile.am:
	* src/Core/Banshee.Services/Banshee.Services.mdp:
	* src/Core/Banshee.Services/Banshee.Collection/IHasTrackSelection.cs: Add
	new interface used by TrackActions to get the selected tracks.

	* src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/TrackEditor.cs: Change
	the ctor to take an Enumerable<TrackInfo> instead of a List<TrackInfo> so
	we can avoid putting all the TrackInfos in memory at once.

	* src/Core/Banshee.ThickClient/Makefile.am:
	* src/Core/Banshee.ThickClient/Banshee.ThickClient.mdp:
	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml
	* src/Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Add Edit menu
	and Track Properties menu item.

	* src/Core/Hyena/Makefile.am:
	* src/Core/Hyena/Hyena.mdp:
	* src/Core/Hyena/Hyena.Data/ModelSelection.cs: New file that takes a Model
	and Selection and is an IEnumerable<T> over the selection.  Will be an
	IList<T> soon.

	* src/Core/Makefile.am:
	* src/Core/Nereid/Nereid/Client.cs: